fix: part of speech wrapping bug

--- a/src/Results.css
+++ b/src/Results.css
@@ -2,6 +2,7 @@
   background: var(--secondary-color);
   border: 2px solid var(--primary-color);
   border-radius: 0px;
+  min-width: 120px;
 }
 
 .partOfSpeechBtn:hover {
